fix blog images so they work properly on mobile

--- a/themes/mike-theme/static/styles/main.css
+++ b/themes/mike-theme/static/styles/main.css
@@ -191,6 +191,12 @@ h1 {
   display: block;
   margin: auto;
 }
+@media only screen and (max-width: 450px) {
+  .blog-image {
+    max-width: 80%;
+    height: auto;
+  }
+}
 
 /* Image Portfolio Styling */
 
